<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp"
    tools:context=".ui.fragment.TaskFragment">

    <!-- Task Name -->
    <EditText
        android:id="@+id/taskNameEditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:hint="@string/task_name_hint"
        android:textSize="18sp"
        android:padding="20dp"
        android:background="@drawable/sample_shapes"
        android:fontFamily="@font/poppinsregular"
        android:layout_marginTop="50dp"
        android:layout_marginBottom="30dp"/>

    <EditText
        android:id="@+id/taskDescriptionEditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:hint="@string/task_description_hint"
        android:textSize="18sp"
        android:padding="20dp"
        android:background="@drawable/sample_shapes"
        android:fontFamily="@font/poppinsregular"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="30dp"/>

    <Spinner
        android:id="@+id/taskPrioritySpinner"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="20dp"
        android:background="@drawable/sample_shapes"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="30dp"
        android:fontFamily="@font/poppinsregular"
        android:entries="@array/priority_levels"
        android:prompt="@string/select_priority"/>

    <TextView
        android:id="@+id/selectedDueDateTextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/no_due_date_selected"
        android:textSize="16sp"
        android:layout_marginBottom="16dp"
        android:clickable="true"
        android:focusable="true"
        android:fontFamily="@font/poppinsregular"
        android:background="?attr/selectableItemBackground"
        android:padding="12dp"/>

    <Button
        android:id="@+id/addTaskButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/add_task_button"
        android:textSize="18sp"
        android:padding="20dp"
        android:background="@drawable/sample_shapes"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="30dp"
        android:backgroundTint="@color/green"
        android:fontFamily="@font/poppinsregular"
        android:textColor="@color/white"/>

</LinearLayout>